--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,1 +1,14 @@
+
+<% flash.each do |type, msg| %>
+  <% if user_signed_in? %>
+    <div class="alert alert-success">
+      <%= msg %>
+    </div>
+  <% else %>
+    <div class="alert alert-secondary">
+      <%= msg %>
+    </div>
+  <% end %>
+<% end %>
+
 No posts yet!
