error loading page and routing with user show page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,9 @@
   </head>
 
   <body>
-    <%= render "layouts/nav" %>
-    <%= yield %>
+    <div class="body-container">
+      <%= render "layouts/nav" %>
+      <%= yield %>
+    </div>
   </body>
 </html>
