--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -3,15 +3,26 @@ html, body {
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.body-container {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+ul {
+  list-style-type: none;
 }
 
 .content {
   display: grid;
   overflow: hidden;
   grid-template-columns: 1fr 3fr 1fr;
-  grid-template-rows: auto;
   /* display: flex; */
-  min-height: 100vh;
+  flex-grow: 1;
   /* flex-direction: column; */
 }
