--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -15,7 +15,8 @@
     <div class="column shadow shadow-primary shadow-intensity-lg">
       <ul>
         <li><%= link_to "Timeline", root_path%><br></li>
-        <li><%= link_to "Profile", user_path(current_user.id) %></li>
+        <%# <li><%= link_to "Profile", user_path(current_user.id) %>
+        <%# </li> %> %>
         <li><%= link_to "Friend Requests", invitations_path %></li>
         <li><%= link_to "Find Friends", users_path %></li>
       </ul>
