--- a/app/views/invitations/show.html.erb
+++ b/app/views/invitations/show.html.erb
@@ -9,11 +9,10 @@
       </ul>
     </div>
     <div class="column-middle">
-      <% @my_invitations.each do |invitation| %>
-        <% requester = User.find(invitation.user_id) %>
-        <%= requester.full_name %>
-        <%= button_to "Accept", invitation_path(invitation.id, :response => "accepted", :invitation_id => invitation.id), method: :patch, class: "btn btn-primary" %>
-        <%= button_to "Decline", invitation_path(invitation.id, :response => "declined", :invitation_id => invitation.id), method: :patch, class: "btn btn-danger" %>
+      <% @my_friends.each do |friend| %>
+        <% invitation = Invitation.find_invitation(current_user.id, friend.id) %>
+        <%= friend.full_name %>
+        <%= button_to "Unfriend", invitation_path(invitation), method: :delete, class: "btn btn-danger" %>
         <br>
       <% end %>
     </div>
