--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -15,6 +15,6 @@
         <br>
       <% end %>
     <% end %>
-    <%= link_to "back to posts", root_path %>
+    <%= link_to "back to posts", posts_path %>
   </div>
 <% end %>
