--- a/app/views/invitations/index.html.erb
+++ b/app/views/invitations/index.html.erb
@@ -2,7 +2,7 @@
 <div class="content">
     <div class="column shadow shadow-primary shadow-intensity-lg">
       <ul>
-        <li><%= link_to "Timeline", root_path%><br></li>
+        <li><%= link_to "Timeline", posts_path%><br></li>
         <li><%= link_to "Profile", user_path(current_user.id) %></li>
         <li><%= link_to "Friend Requests", invitations_path %></li>
         <li><%= link_to "Find Friends", users_path %></li>
