finished adding like feature

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -55,3 +55,14 @@ textarea {
   outline: none;
   resize: none;
 }
+
+.post {
+  border-radius: 25px;
+  padding: 1rem;
+  outline: none;
+}
+
+hr {
+  border-color: red;
+  margin: 0rem;
+}
