--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -28,6 +28,13 @@
             <div class="card p-2 my-2">
               <div class="d-flex">
                 <%= link_to comment.user.full_name, user_path(comment.user_id), class: "text-decoration-none flex-grow-1" %>
+                <% pre_like = comment.likes.find { |like| like.user_id == current_user.id } %>
+                <% if pre_like %>
+                  <%= button_to "Unlike", comment_like_path(comment, pre_like), method: :delete %>
+                <% else %>  
+                  <%= button_to "Like", comment_likes_path(comment), method: :post %>
+                <% end %>
+                <%= comment.likes.count %>
                 <% if comment.user_id == current_user.id %>
                   <%= button_to "delete", post_comment_path(@post, comment), method: :delete %>
                 <% end %>
