--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
   <body>
     <div class="body-container">
-      <%= render "layouts/nav" %>
+      <%= render "layouts/nav", class: "navbar" %>
       <%= yield %>
     </div>
   </body>
