--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,7 +1,6 @@
 
 <nav class="navbar navbar-expand-lg bg-light">
   <div class="container-fluid">
-    <%# <a class="navbar-brand" href="#">Hobbyist</a> %>
     <%= link_to "Hobbyist", root_path, class: "navbar-brand" %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -9,18 +8,25 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#">Home</a>
+          <%= link_to "About", about_path, class: "nav-link" %>
         </li>
       </ul>
     </div>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <% if user_signed_in? %>
-            <%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: "btn btn-primary" %>
-          <% else %>
-            <%= link_to "Sign In", user_session_path, class: "btn btn-primary" %>
-          <% end %>  
+        <% if user_signed_in? %>
+          <div class="d-flex align-items-center">
+            <%= link_to user_path(current_user), class: "text-decoration-none text-secondary", data: { turbo_frame: "middle-column"} do %>
+              <li class="nav-item text-dark fs-4">
+                <%= image_tag user_avatar(current_user), class: "rounded-circle avatar-extra-small" %>
+                <%= current_user.full_name %>
+              </li>
+            <% end %>
+              <li class="nav-item">
+                <%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: "btn btn-outline-danger" %>
+              </li>
+          </div>
+        <% end %>  
         </li>
       </ul>
     </div>
