--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,15 +1,4 @@
 
-  <% flash.each do |type, msg| %>
-    <div class="alert alert-secondary">
-      <%= msg %>
-      <% if @post %>
-        <% @post.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-      <% end %>
-    </div>
-  <% end %>
-  
   <div class="content">
     <div class="left-column column shadow shadow-primary shadow-intensity-lg">
       <ul>
@@ -27,57 +16,35 @@
 
     <%= turbo_frame_tag "middle-column" do %>
 
+      <% flash.each do |type, msg| %>
+        <div class="alert alert-secondary">
+          <%= msg %>
+          <% if @post %>
+            <% @post.errors.full_messages.each do |msg| %>
+              <li><%= msg %></li>
+            <% end %>
+          <% end %>
+        </div>
+      <% end %>
+
       <div class="column-middle">
         <%= form_with model: @post, url: posts_path, scope: :post do |form| %>
           <%= form.hidden_field :user_id, value: current_user.id %>
           <%= form.text_area :post_content, placeholder: "What's on your mind?", class: "post-box" %>
-          <%= form.submit class: "btn btn-primary post-button" %>
+          <%= form.submit "Post", class: "btn btn-primary post-button" %>
         <% end %>
+
+        <%= render partial: "posts/text_box", locals: { model: @post, url: posts_path, scope: :post, content: :post_content, placeholder: "What's on your mind?" } %>
       
         <% if @friends_posts %>
-          <% @friends_posts.each do |post| %>
-            <div class="post shadow shadow-intensity-xl mt-3">
-              <div class="d-flex">
-                <%= link_to user_path(post.user), data: { turbo_frame: "middle-column"} do %>
-                  <%= image_tag user_avatar(post.user), class: "rounded-circle avatar-small" %>
-                <% end %>
-                <div class="d-flex flex-column flex-grow-1">
-                  <div class="d-flex">
-                    <div class="flex-grow-1">
-                      <%= link_to post.user.full_name, user_path(post.user_id), class: "text-decoration-none" %>
-                    </div>
-                    <% if post.user_id == current_user.id %>
-                      <%= link_to "edit", edit_post_path(post), method: :edit %>
-                      <%= button_to "delete", post_path(post), method: :delete %>
-                    <% end %>
-                  </div>
-                  <div class="text-muted">
-                    <%= post.created_at.strftime("%B %e %Y") %>
-                  </div>
-                </div>
-              </div>
-              <hr class="my-2">
-              <%= post.post_content %>
-              <hr class="my-2">
-              <p>
-              <div class="d-flex">
-                <% pre_like = post.likes.find { |like| like.user_id == current_user.id } %>
-                <% if pre_like %>
-                  <%= button_to "Unlike", post_like_path(post, pre_like), method: :delete %>
-                <% else %>
-                  <%= button_to "Like", post_likes_path(post), method: :post %>
-                <% end %>
-                <div class="flex-grow-1"><%= post.likes.count %></p></div>
-                <%= link_to "Comment (#{post.comments.count})", post_path(post), class: "text-decoration-none" %>
-              </div>
-            </div>
-          <% end %>
+          <%= render partial: "post_card", locals: { posts: @friends_posts } %>
         <% end %>
       </div>
     <% end %>
 
 
     <div class="right-column column shadow shadow-primary shadow-intensity-lg">
+    <p class="fs-5">People  you may know</p>
       <% User.not_friends(current_user).each do |user| %>
         <%= link_to user_path(user), class: "text-decoration-none text-secondary", data: { turbo_frame: "middle-column"} do %>
           <div class="px-3 pt-3">
