--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -30,7 +30,7 @@
       </div>
 
       <div class="field">
-        <%= f.label :ocupation %><br />
+        <%= f.label :occupation %><br />
         <%= f.text_field :occupation %>
       </div>
 
