--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,17 +3,19 @@
 <%= turbo_frame_tag "middle-column" do %>
   <div>
     <% @users.each do |user| %>
-      <% unless current_user == user %>
-        <%= user.email %>
-        <% if current_user.friend_with?(user) %>
-          Already friends!
-        <% elsif Invitation.reacted?(current_user.id, user) %>
-          <button type="button" class="btn btn-secondary">Request Pending</button>
-        <% else %>
-          <%= button_to "Add Friend", invitations_path(:user => user), class: "btn btn-primary" %>
+      <div>
+        <% unless current_user == user %>
+          <%= user.email %>
+          <% if current_user.friend_with?(user) %>
+            Already friends!
+          <% elsif Invitation.reacted?(current_user.id, user) %>
+            <button type="button" class="btn btn-secondary">Request Pending</button>
+          <% else %>
+            <%= button_to "Add Friend", invitations_path(:user => user), class: "btn btn-primary" %>
+          <% end %>
+          <br>
         <% end %>
-        <br>
-      <% end %>
+      </div>
     <% end %>
     <%= link_to "back to posts", posts_path %>
   </div>
