--- a/app/views/invitations/index.html.erb
+++ b/app/views/invitations/index.html.erb
@@ -4,10 +4,11 @@
     <div class="column-middle">
       <% @my_invitations.each do |invitation| %>
         <% requester = User.find(invitation.user_id) %>
-        <%= requester.full_name %>
-        <%= button_to "Accept", invitation_path(invitation.id, :response => "accepted", :invitation_id => invitation.id), method: :patch, class: "btn btn-primary" %>
-        <%= button_to "Decline", invitation_path(invitation.id, :response => "declined", :invitation_id => invitation.id), method: :patch, class: "btn btn-danger" %>
-        <br>
+        <div class="request">
+          <%= requester.full_name %>
+          <%= button_to "Accept", invitation_path(invitation.id, :response => "accepted", :invitation_id => invitation.id), method: :patch, class: "btn btn-primary" %>
+          <%= button_to "Decline", invitation_path(invitation.id, :response => "declined", :invitation_id => invitation.id), method: :patch, class: "btn btn-danger" %>
+        </div>
       <% end %>
     </div>
   </div>
