--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,55 +1,30 @@
 <%= turbo_frame_tag "middle-column" do %>
+
+  <% flash.each do |type, msg| %>
+    <div class="alert alert-secondary">
+      <%= msg %>
+      <% if @post %>
+        <% @post.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      <% end %>
+    </div>
+  <% end %>
+
   <div class="column-middle">
     <div class="post shadow shadow-intensity-xl mt-3">
-      <div>
-        <%= link_to @post.user.full_name, user_path(@post.user_id), class: "text-decoration-none" %>
-      </div>
-      <div class="text-muted">
-        <%= @post.created_at.strftime("%B %e %Y") %>
-      </div>
+      <%= render partial: "posts/post_header", locals: { post: @post } %>
       <hr class="my-2">
-      <%= @post.post_content %>
+      <%= render partial: "posts/post_content", locals: { post: @post } %>
       <hr class="my-2">
-      <p>
-      <div class="d-flex">
-        <% pre_like = @post.likes.find { |like| like.user_id == current_user.id } %>
-        <% if pre_like %>
-          <%= button_to "Unlike", post_like_path(@post, pre_like), method: :delete %>
-        <% else %>
-          <%= button_to "Like", post_likes_path(@post), method: :post %>
-        <% end %>
-        <div class="flex-grow-1"><%= @post.likes.count %></p></div>
-        <%= link_to "Comment", post_path(@post) %>
-      </div>
+      <%= render partial: "posts/post_footer", locals: { post: @post } %>
+      <%= render partial: "posts/comments", locals: { post: @post } %>
       <hr class="my-2">
       <div>
-        <% if @post.comments %>
-          <% @post.comments.each do |comment| %>
-            <div class="card p-2 my-2">
-              <div class="d-flex">
-                <%= link_to comment.user.full_name, user_path(comment.user_id), class: "text-decoration-none flex-grow-1" %>
-                <% pre_like = comment.likes.find { |like| like.user_id == current_user.id } %>
-                <% if pre_like %>
-                  <%= button_to "Unlike", comment_like_path(comment, pre_like), method: :delete %>
-                <% else %>  
-                  <%= button_to "Like", comment_likes_path(comment), method: :post %>
-                <% end %>
-                <%= comment.likes.count %>
-                <% if comment.user_id == current_user.id %>
-                  <%= button_to "delete", post_comment_path(@post, comment), method: :delete %>
-                <% end %>
-              </div>
-              <%= comment.comment_content %>
-            </div>
-          <% end %>
-        <% end %>
-      </div>
-      <hr class="my-2">
-      <div>
-        <%= form_with model: @comment, url: post_comments_path(@post) do |form| %>
+        <%= form_with model: @comment, scope: :comment, url: post_comments_path(@post) do |form| %>
           <%= form.hidden_field :user_id, value: current_user.id %>
           <%= form.text_area :comment_content, placeholder: "Write a comment...", class: "post-box" %>
-          <%= form.submit class: "btn btn-primary post-button" %>
+          <%= form.submit "Post", class: "btn btn-primary post-button" %>
         <% end %>
       </div>
     </div>
